fix spacing and color of email sign up button in footer

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -112,7 +112,8 @@ footer img {
   align-items: center;
 }
 
-#email-signup form button {
+#email-signup form button,
+footer form button {
   margin-left: 8px;
 }
 
